// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`booklet-image Basic renders as expected 1`] = `
<svg
  height={60}
  viewBox="0 0 108 108"
  width={60}
>
  <circle
    cx="53"
    cy="55"
    fill="#83e5af"
    r="45"
  />
  <path
    d="M63.2378,70H39.8685a5.8873,5.8873,0,0,0-5.7527,4.8416,6.137,6.137,0,0,0-.1092.8683A5.8982,5.8982,0,0,0,39.7622,82H63.77A5.341,5.341,0,0,0,69,76.5544V64A5.8847,5.8847,0,0,1,63.2378,70Z"
    fill="#30aa67"
  />
  <rect
    fill="#3dbc7d"
    height="39"
    rx="4.7443"
    ry="4.7443"
    width="34"
    x="39"
    y="38"
  />
  <path
    d="M63.2378,70.2569A5.7919,5.7919,0,0,0,69,64.4358V32.2566A4.2566,4.2566,0,0,0,64.7434,28H38.2566A4.2566,4.2566,0,0,0,34,32.2566V75h.107a5.9177,5.9177,0,0,1,5.8179-4.7431"
    fill="#4bd18b"
  />
  <rect
    fill="#3dbc7d"
    height="15"
    rx="2.1365"
    ry="2.1365"
    width="25"
    x="39"
    y="33"
  />
</svg>
`;

exports[`booklet-image Bigger icon renders as expected 1`] = `
<svg
  height={120}
  viewBox="0 0 108 108"
  width={120}
>
  <circle
    cx="53"
    cy="55"
    fill="#83e5af"
    r="45"
  />
  <path
    d="M63.2378,70H39.8685a5.8873,5.8873,0,0,0-5.7527,4.8416,6.137,6.137,0,0,0-.1092.8683A5.8982,5.8982,0,0,0,39.7622,82H63.77A5.341,5.341,0,0,0,69,76.5544V64A5.8847,5.8847,0,0,1,63.2378,70Z"
    fill="#30aa67"
  />
  <rect
    fill="#3dbc7d"
    height="39"
    rx="4.7443"
    ry="4.7443"
    width="34"
    x="39"
    y="38"
  />
  <path
    d="M63.2378,70.2569A5.7919,5.7919,0,0,0,69,64.4358V32.2566A4.2566,4.2566,0,0,0,64.7434,28H38.2566A4.2566,4.2566,0,0,0,34,32.2566V75h.107a5.9177,5.9177,0,0,1,5.8179-4.7431"
    fill="#4bd18b"
  />
  <rect
    fill="#3dbc7d"
    height="15"
    rx="2.1365"
    ry="2.1365"
    width="25"
    x="39"
    y="33"
  />
</svg>
`;
